Add a setting to specify which repository to use during peer recoveries